testing/macro-tests/tests/ui/default_enum_marker_without_trait.rs
use icydb::design::prelude::*;

#[enum_(variant(ident = "Pending", default), variant(ident = "Active"))]
pub struct UnusedEnumDefault;

fn main() {}
